# reviews_analysis

./: .gitignore  README.md  main.py  pyproject.toml
settings/: settings.py
utils/: logger.py
wb_service/: __init__.py  wb_connector.py
