[project]
name = "reviews-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Viktor Klimov",email = "vitya.klimov.2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.34.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "reviews_analysis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
